--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -125,6 +125,8 @@
         <p><strong id="historyTitle">Riwayat Unduhan:</strong></p>
         <div id="historyList"></div>
         <button id="clearHistoryBtn">Hapus Riwayat</button>
+        <button id="exportHistoryBtn">Ekspor Riwayat</button>
+        <input type="file" id="importHistoryBtn" style="display: none;" accept=".json">
     </div>
     
     <p class="warning" id="warningText">⚠️ Peringatan: Otomatisasi ini mungkin melanggar kebijakan Coretax. Gunakan dengan risiko Anda sendiri.</p>
